Refactor api routes and streamline landing page components
